Bug 184017 - font rendering problem with rssnow plasmoid
Summary: font rendering problem with rssnow plasmoid
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-misc (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-11 13:32 UTC by Ritesh Raj Sarraf
Modified: 2009-07-31 00:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
rssnow font rendering problem (28.63 KB, image/jpeg)
2009-02-11 13:32 UTC, Ritesh Raj Sarraf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ritesh Raj Sarraf 2009-02-11 13:32:03 UTC
Version:            (using KDE 4.2.0)
OS:                Linux
Installed from:    Debian testing/unstable Packages

When I add rssnow plasmoid to the panel, I can't read the news because the font rendering is bad.

The attached screenshot should be able to explain the details.
Comment 1 Ritesh Raj Sarraf 2009-02-11 13:32:45 UTC
Created attachment 31222 [details]
rssnow font rendering problem
Comment 2 Ritesh Raj Sarraf 2009-03-13 07:38:01 UTC
Hi, Do you ACK this as a problem?

Currently, both the widgets are in kdebase-plasma and are unusable.
Comment 3 Sebastian Kügler 2009-07-31 00:20:32 UTC
This bug still exists in 4.3.60, I'm not sure why it's closed invalid.

Using the rssnow applet in the panel is not possible for two reasons:

- the font is too small, smallestReadableFont is not respected
- the logo is painted over the news feed, making it hard to read
Comment 4 Sebastian Kügler 2009-07-31 00:32:00 UTC
SVN commit 1004799 by sebas:

Use the smallestReadableFont instead of some hand-rolled size

- Dont display the logo in the panel when there's not enough space
- Also save the feedList after a feed has been dropped. In this case, it's
  OK to call configNeedsSaving().

BUG:184017

Will backport for 4.3.1

 M  +10 -4     news.cpp  
 M  +2 -7      single-feed.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1004799
Comment 5 Sebastian Kügler 2009-07-31 00:37:51 UTC
SVN commit 1004800 by sebas:

Use the smallestReadableFont instead of some hand-rolled size

- Dont display the logo in the panel when there's not enough space
- Also save the feedList after a feed has been dropped. In this case, it's
  OK to call configNeedsSaving().

CCBUG:184017

backported from trunk



 M  +10 -4     news.cpp  
 M  +2 -7      single-feed.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1004800