Use the smallestReadableFont instead of some hand-rolled size

- Dont display the logo in the panel when there's not enough space
- Also save the feedList after a feed has been dropped. In this case, it's
  OK to call configNeedsSaving().

BUG:184017

Will backport for 4.3.1

svn path=/trunk/KDE/kdeplasma-addons/; revision=1004799